change a tiny change in find iop algorithm